--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",            
     "node-fetch": "^3.2.0",      
     "dotenv": "^16.0.3",        
-    "ArduinoJson": "^6.18.5",    
+    "arduinojson": "^6.18.5",    
     "webpack": "^5.88.0",         
     "webpack-cli": "^5.1.0"       
   },
