--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "webpack-cli": "^5.1.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
-  "author": "Your Name",
+  "author": "Anryl",
   "license": "MIT"
 }
