--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack-cli": "^5.1.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
   },
   "author": "Anryl",
   "license": "MIT"
