--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "arduino-web-game",
+  "name": "falling-ball-server",
   "version": "1.0.0",
-  "description": "An interactive web game with Arduino and OLED display",
-  "main": "index.js",
+  "description": "Backend for Falling Ball Game",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.1",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "node-fetch": "^3.2.0",
-    "dotenv": "^16.0.3",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0"
+    "express": "^4.18.2"
   },
-  "devDependencies": {
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0"
-  },
-  "engines": {
-    "node": "18.x"
-  },
-  "author": "Anryl",
-  "license": "MIT"
+  "author": "Anryl ^oxo^///~",
+  "license": "ISC"
 }
