--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "esp32-postgresql-backend",
+  "name": "FallingBallGame",
   "version": "1.0.0",
-  "description": "Backend for ESP32 to send and receive data from PostgreSQL",
+  "description": "A server w/ SQL usage.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "body-parser": "^1.19.0"
+    "express": "^4.18.2",
+    "pg": "^8.9.0"
   },
   "engines": {
-    "node": ">=14.0.0"
-  }
+    "node": ">=14.x"
+  },
+  "author": "Anryl",
+  "license": "ISC"
 }
